# zed-web

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  todo.md
.github/workflows/: docs.yml  release.yml
deploy/: Caddyfile  start-container.sh
docs/: docusaurus.config.js  package.json  sidebars.js
docs/docs/: frontend-stack.md  intro.md  zed-server-communication.md
docs/docs/deployment/: bare.md  docker.md
docs/src/css/: custom.css
scripts/: package-release.sh  run-frontend.sh  run-gateway.sh  run-local.sh
zed-web-frontend/: package.json  rsbuild.config.js
zed-web-frontend/src/: App.css  App.jsx
zed-web-frontend/src/commands/: CommandRegistry.js  workbenchCommandRegistry.js
zed-web-frontend/src/constants/: appMenus.js  panels.js
zed-web-gateway/: .gitignore  Cargo.toml  README.md
zed-web-gateway/.git.backup/: COMMIT_EDITMSG  index
zed-web-gateway/.git.backup/logs/: HEAD
zed-web-gateway/.git.backup/refs/heads/: master
zed-web-gateway/.github/workflows/: release.yml
zed-web-gateway/crates/gateway-core/: Cargo.toml
zed-web-gateway/crates/gateway-core/src/: api.rs  error.rs  events.rs  lib.rs  session.rs  ssh.rs
zed-web-gateway/crates/gateway-server/: Cargo.toml
zed-web-gateway/crates/gateway-server/src/: main.rs
zed-web-gateway/crates/gateway-ssh/: Cargo.toml
zed-web-gateway/crates/gateway-ssh/src/: lib.rs  proxy.rs  terminal.rs  transport.rs
zed-web-gateway/crates/gateway-web/: Cargo.toml
zed-web-gateway/crates/gateway-web/src/: app.rs  commands.rs  fake_remote_proxy.rs  handlers.rs  lib.rs  routes.rs  terminal.rs  text_edits.rs
zed-web-gateway/crates/gateway-web/src/registry/: handle.rs  managed_remote.rs  mod.rs  remote_version.rs  state.rs
zed-web-gateway/crates/gateway-web/tests/: http_errors.rs  mvp_flows.rs  remote_version_policy.rs
zed-web-gateway/crates/gateway-zed-proxy/: Cargo.toml
zed-web-gateway/crates/gateway-zed-proxy/src/: client.rs  messages.rs
zed-web-gateway/scripts/: package-release.sh
(+75 files in other folders)
