[workspace]
members = [
  "crates/gateway-core",
  "crates/gateway-ssh",
  "crates/gateway-zed-proxy",
  "crates/gateway-web",
  "crates/gateway-server",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
actix-cors = "0.7"
actix-web = "4.11"
actix-ws = "0.3"
base64 = "0.22"
flate2 = "1"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
prost = "0.14"
